# Acuity

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  DEPLOY.md  DESIGN.md  README.md  REGRETS.md  REVIEW-PLAN.md  ROADMAP.md  SETUP.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  plan.md  render.yaml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  main.py  redis_client.py  schemas.py  security.py
backend/app/db/: base.py  models.py
backend/app/routers/: auth.py  interview.py  ws.py
backend/app/services/: agent.py  executor.py  hallucinator.py  llm.py  names.py  pushback.py  scorecard.py  shell.py  telemetry.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_d2_config.py  0003_rename_room_to_session.py  0004_interview_type_token_budget.py  0005_waiting_room.py  0006_multi_features.py  0007_session_files.py  0008_hallucination_type.py  0008_interviewer_code.py  0009_interviewer_code.py
backend/scripts/: mint_test_token.py
deploy/: .env.example  Caddyfile
frontend/: .dockerignore  .env.local.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CreateRoomForm.tsx  CreateSessionForm.tsx  DisplayNameModal.tsx
frontend/lib/: api.ts  auth.ts  mocks.ts  ws.ts  (+1 more)
transcripts/: transcript2-phyo.md  transcript3-phyo.md  transcript4-phyo.md  transcript5-sithu.md  transcript6-sithu.md  trasncript1-phyo.md
(+47 files in other folders)
