[project]
name = "acuity-backend"
version = "0.1.0"
description = "Acuity FastAPI backend — real-time interview gateway + AI services."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "pydantic-settings>=2.7",
    "pyjwt[crypto]>=2.10",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.14",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
